# stardust

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LMDB.txt  Makefile  README.md  TODO.txt  docker-compose.yml  mypy.ini
.github/workflows/: ci.yml
clients/python/: pyproject.toml
clients/python/src/stardust/: __init__.py  client.py
clients/python/src/stardust/schemas/: graph.capnp
clients/typescript/: package.json  pnpm-lock.yaml  tsconfig.json
clients/typescript/src/: client.ts  http.ts  index.ts  types.ts
demo/: README.md  pyproject.toml
demo/src/demo/: __init__.py
explorer/: biome.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml
explorer/src/: App.tsx  edge-details.tsx  graph-viewer.tsx  main.tsx  node-details.tsx  node-search.tsx  stardust.ts
explorer/src/types/: three-spritetext.d.ts
mcp/: README.md  pyproject.toml
mcp/src/stardust_mcp/: server.py
schemas/: graph.capnp
src/: client_example.cpp  encode.hpp  env.cpp  env.hpp  http_server.cpp  http_server.hpp  main.cpp  server.cpp  server.hpp  store.cpp  store.hpp
tests/: hello_test.cpp  integration_rpc_test.cpp
